tests/unit/default/syntax-error/064-create-table-parens-column-comma.x.t
---- IN ----
+%table(id:int,|
---- OUT ----
---- ERR ----
syntax: expected `)` after `...ble(id:int` near `,|` at position 14 - at line 1
---- EXIT ----
1
